--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <meta name="twitter:image" content="">
   <meta name="twitter:url" content="https://recreatorus.github.io/countryinfo/">
   <meta name="twitter:card" content="">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preload" as="font" href="fonts/cormorant-garamond-v7-latin_cyrillic-500.woff2" type="font/woff2"
     crossorigin>
