preconnect for openweathermap

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     crossorigin>
   <link rel="preload" as="font" href="fonts/rubik-v9-cyrillic_latin-300.woff2" type="font/woff2" crossorigin>
   <link rel="preload" as="font" href="fonts/rubik-v9-cyrillic_latin-regular.woff2" type="font/woff2" crossorigin>
+  <link rel="preconnect" href="https://api.openweathermap.org" />
   <style>
     @font-face {
       font-family: 'Cormorant Garamond';
