--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <hr>
     <div class="input-field">
-      <input id="search" type="text" class="validate" autocomplete="off" required />
+      <input id="search" type="text" autocomplete="off" required />
       <div class="bar"></div>
       <label>Enter country (e.g. Russia)</label>
     </div>
