--- a/index.html
+++ b/index.html
@@ -34,27 +34,9 @@
     <meta name="twitter:url" content="https://recreatorus.github.io/countryinfo/" />
     <meta name="twitter:card" content="" />
     <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="preload"
-      as="font"
-      href="https://recreatorus.github.io/fonts/cormorant-garamond-500.woff2"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="https://recreatorus.github.io/fonts/rubik-300.woff2"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="https://recreatorus.github.io/fonts/rubik-regular.woff2"
-      type="font/woff2"
-      crossorigin
-    />
+    <link rel="preload" as="font" href="../fonts/cormorant-garamond-500.woff2" type="font/woff2" crossorigin />
+    <link rel="preload" as="font" href="../fonts/rubik-300.woff2" type="font/woff2" crossorigin />
+    <link rel="preload" as="font" href="../fonts/rubik-regular.woff2" type="font/woff2" crossorigin />
     <link rel="preconnect" href="https://api.openweathermap.org" />
     <style>
       @font-face {
@@ -72,9 +54,8 @@
         font-display: swap;
         font-style: normal;
         font-weight: 300;
-        src: local('Rubik Light'), local('Rubik-Light'),
-          url('https://recreatorus.github.io/fonts/rubik-300.woff2') format('woff2'),
-          url('https://recreatorus.github.io/fonts/rubik-300.woff') format('woff');
+        src: local('Rubik Light'), local('Rubik-Light'), url('../fonts/rubik-300.woff2') format('woff2'),
+          url('../fonts/rubik-300.woff') format('woff');
       }
 
       @font-face {
@@ -82,9 +63,8 @@
         font-display: swap;
         font-style: normal;
         font-weight: 400;
-        src: local('Rubik'), local('Rubik-Regular'),
-          url('https://recreatorus.github.io/fonts/rubik-regular.woff2') format('woff2'),
-          url('https://recreatorus.github.io/fonts/rubik-regular.woff') format('woff');
+        src: local('Rubik'), local('Rubik-Regular'), url('../fonts/rubik-regular.woff2') format('woff2'),
+          url('../fonts/rubik-regular.woff') format('woff');
       }
     </style>
     <!--[if lt IE 9]>
