--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         font-style: normal;
         font-weight: 500;
         src: local('Cormorant Garamond'), local('Cormorant Garamond'),
-          url('https://recreatorus.github.io/fonts/cormorant-garamond-500.woff2') format('woff2'),
-          url('https://recreatorus.github.io/fonts/cormorant-garamond-500.woff') format('woff');
+          url('../fonts/cormorant-garamond-500.woff2') format('woff2'),
+          url('../fonts/cormorant-garamond-500.woff') format('woff');
       }
 
       @font-face {
