Shake on invalid input

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <hr />
       <div class="input-field">
-        <input id="search" type="text" autocomplete="off" required />
+        <input id="search" type="text" autocomplete="off" pattern="[A-Za-z]*" required />
         <div class="bar"></div>
         <label>Enter country (e.g. Russia)</label>
       </div>
